test note on yaml file

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -28,6 +28,13 @@ steps:
     platform: '$(buildPlatform)'
     configuration: '$(buildConfiguration)'
 
+# This step performs a unit test before building the solution file.
+
+- task: DotNetCoreCLI@2
+  inputs:
+    command: test
+    projects: '**/*.csproj'
+    arguments: '--configuration $(buildConfiguration)'
 
 - task: VSTest@2
   inputs:
