--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -56,7 +56,10 @@ steps:
     zipAfterPublish: True
 
 # this code takes all the files in $(Build.ArtifactStagingDirectory) and uploads them as an artifact of your build.
-- task: PublishPipelineArtifact@1
-  inputs:
-    targetPath: '$(Build.ArtifactStagingDirectory)' 
-    artifactName: 'myTestWeatherSite'
+
+- task: PublishBuildArtifacts@1
+  displayname: 'Publish artifacts'
+
+# inputs:
+#    targetPath: '$(Build.ArtifactStagingDirectory)' 
+#   artifactName: 'myTestWeatherSite'
